force-app/main/default/objects/Food_Reference_Component__c/Food_Reference_Component__c.object-meta.xml
<CustomObject>
    <label>Food Reference Component</label>
    <nameField>
        <displayFormat>FRC-{00000000}</displayFormat>
        <label>Food Reference Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Food Reference Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>