force-app/main/default/objects/Food_Reference_Component__c/fields/Component_Food_Reference__c.field-meta.xml
<CustomField>
    <fullName>Component_Food_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component Food Reference</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Food_Reference__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Food</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Food_Reference__c</referenceTo>
    <relationshipLabel>Food Reference Components (Component Food Reference)</relationshipLabel>
    <relationshipName>Food_Reference_Components1</relationshipName>
    <type>Lookup</type>
</CustomField>