force-app/main/default/objects/Food_Reference_Component__c/fields/Number_of_Servings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Servings__c</fullName>
    <label>Number of Servings</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>