force-app/main/default/objects/Food_Reference_Component__c/fields/Parent_Food_Reference__c.field-meta.xml
<CustomField>
    <fullName>Parent_Food_Reference__c</fullName>
    <label>Parent Food Reference</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Food_Reference__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Meal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Food_Reference__c</referenceTo>
    <relationshipLabel>Food Reference Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>